Version 0.1624: Sun Mar 22 2015
- Moved code to github
- Added POD test
- Improve testability of stdin_tell_bug.t

Version 0.1623: Sun Aug 9 2009
- Fixed a bug where files with binary data would sometimes cause an
	unitialized value warning at line 394 as well as incorrect behavior. (Thanks
	to Bill Nugent <whn@lopi.com> for the bug report and initial patch.)
- Removed unused ExtUtils::MakeMaker::bytes, which doesn't exist anymore
	anyway. (Thanks to Slaven Rezić <srezic@cpan.org> for the bug report.)

Version 0.1622: Wed Jul 16 2008
- Updated to the latest version of Module::Install
- Removed auto-install for better compatibility with CPAN and others
- Moved hosting to Google Code

Version 0.1621:
- Improved compatibility with versions of Perl older than 5.6.0, by replacing
  "use bytes" with "use ExtUtils::MakeMaker::bytes". (Thanks to
  <nothingmuch@woobling.org> for the bug report.)
- Fixed test case error reporting for tests that fail to fork. (Thanks to
  <corion-cpansmoker@corion.net> for the test failure report.)
- Fixed unexpected success of binmode_bug.t test on Windows 2000. (Thanks to
  Max Maischein <corion@corion.net> for the bug report.)
- Fixed a bug in stdin_tell_bug.t. (Thanks to Max Maischein
  <corion@corion.net> for the bug report.)

Version 0.1620: Tue Dec 21 2004
- Fixed version numbers, which were incompatible with some modules. (Thanks to
  Tassilo von Parseval <tassilo.von.parseval@rwth-aachen.de> for the bug
  report)
- Switched to Test::More for better test reporting
- Removed the use of the "English" module to work around a bug that exists in
  some versions of Perl. See
  http://groups.google.com/groups?th=e3483b06a956030e for more info. (Thanks
  to Jim Longino <jlongino@jaguar1.usouthal.edu> for the bug report.)

Version 0.16.1: Thu Sep 16 2004
- Added missing inc/ dependency

Version 0.16.0: Wed Sep 15 2004
- Fixed stdin_tell_bug.t so that it's more platform-dependent. (Martin Thurn