@@ -376,21 +376,21 @@ sub getline
     $line = $1;
     substr($self->{'filehandle_unget_buffer'},0,length $line) = '';
   }
-	# My best guess at a fix for failures like these:
-	# http://www.cpantesters.org/cpan/report/2185d342-b14c-11e4-9727-fcccf9ba27bb
-	# http://www.cpantesters.org/cpan/report/74a6f9b6-95db-11e4-8169-9f55a5948d86
-	# It seems like even though $/ == undef, we're not reading all the rest of
-	# the file. Unfortunately I can't repro this, so I'll change it and see if
-	# the CPAN-Testers tests start passing.
+  # My best guess at a fix for failures like these:
+  # http://www.cpantesters.org/cpan/report/2185d342-b14c-11e4-9727-fcccf9ba27bb
+  # http://www.cpantesters.org/cpan/report/74a6f9b6-95db-11e4-8169-9f55a5948d86
+  # It seems like even though $/ == undef, we're not reading all the rest of
+  # the file. Unfortunately I can't repro this, so I'll change it and see if
+  # the CPAN-Testers tests start passing.
   elsif (!defined($input_record_separator))
-	{
+  {
     $line = $self->{'filehandle_unget_buffer'};
     $self->{'filehandle_unget_buffer'} = '';
     my @other_lines = $self->{'fh'}->getlines(@_);
 
     # Not sure if this is necessary. The code in getlines() below seems to
-		# suggest so.
-		@other_lines = () if @other_lines && !defined($other_lines[0]);
+    # suggest so.
+    @other_lines = () if @other_lines && !defined($other_lines[0]);
 
     if ($line eq '' && !@other_lines)
     {
@@ -400,7 +400,7 @@ sub getline
     {
       $line .= join('', @other_lines);
     }
-	}
+   }
   else
   {
     $line = $self->{'filehandle_unget_buffer'};
